commented out preload

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <section class="row d-flex">
                 <form id="left-column" class="left-column col-xl-2 col-lg-2 col-md-2  border border-primary p-3 m-1">
                     <h2>Search for a City:</h2>
-                    <input value = "Winston-Salem" id="input-id" placeholder="city name" type="text">
+                    <input  id="input-id" placeholder="city name" type="text">
                     <button type="submit" id="search-button" class="search-button bg-dark text-white ">Search</button>
                     <button id="clear-history" class="bg-dark text-white">Clear History</button>
                     <hr>
